# bfi

./: .gitignore  CMakeLists.txt  Makefile  README.md  bfi.c  config.mk
.github/workflows/: clang-format.yml  cmake-single-platform.yml  make.yml
bfx/: CMakeLists.txt
bfx/src/: bfx.c  main.c
libbfx/: CMakeLists.txt
libbfx/src/: bfx.c  bfx.h  compile.c  compile.h  interpret.c
src/: CMakeLists.txt  bf.c  bf.h  bfx.c  compile.c  main.c
src/libbfx/: CMakeLists.txt  bfx.c  bfx.h  compile.c  interpret.c  interpret.h  main.c
test/: CMakeLists.txt  test_bfx.c
